fixing card width on mobile

--- a/css/_sectionfour.scss
+++ b/css/_sectionfour.scss
@@ -143,7 +143,7 @@ $poppins-font: 'Poppins', sans-serif;
     margin-bottom: 5rem !important;
 
     .card {
-      width: 25rem;
+      width: 24rem;
       height: 15rem;
       border-radius: 0px;
       padding: 0rem;
